--- a/package.json
+++ b/package.json
@@ -32,34 +32,40 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
+    "ember-cli-materialize": "^0.19.5",
     "ember-cli-moment-shim": "1.1.0",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
-    "ember-cli-sass": "4.2.1",
+    "ember-cli-sass": "git://github.com/mike-north/ember-cli-sass.git#8ceb57d41f5774e8ececb5d1f05454449c19000c",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-composability": "0.3.2",
     "ember-concurrency": "^0.6.1",
     "ember-data": "^2.5.0",
     "ember-export-application-global": "^1.0.5",
     "ember-font-awesome": "^2.1.0",
     "ember-getowner-polyfill": "1.0.1",
+    "ember-keyboard": "1.0.3",
     "ember-load-initializers": "^0.5.1",
+    "ember-material-design-icons-shim": "0.1.4",
+    "ember-materialize-shim": "0.1.6",
+    "ember-modal-dialog": "0.8.4",
     "ember-moment": "6.1.0",
     "ember-network": "0.3.0",
+    "ember-new-computed": "1.0.3",
     "ember-promise-dialog": "0.0.0",
+    "ember-radio-button": "1.0.7",
     "ember-resolver": "^2.0.3",
     "ember-simple-auth": "1.1.0-beta.4",
     "ember-simple-auth-loopback": "1.0.2",
     "ember-simple-form": "1.0.1",
-    "ember-truth-helpers": "^1.2.0",
+    "ember-truth-helpers": "1.2.0",
     "ember-with-service": "1.1.0",
-    "ember-yoga-sass": "1.0.0",
     "emberx-select": "2.1.2",
     "eslint": "^2.8.0",
     "eslint-config-rtablada": "^1.0.1",
     "liquid-fire": "0.23.0",
     "loader.js": "^4.0.1",
-    "sass-lint": "^1.6.2",
-    "yoga-sass": "1.0.1"
+    "sass-lint": "^1.6.2"
   }
 }
