rewards page wip

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "ember build",
     "start": "ember server",
     "test": "ember test",
-    "deploy": "ember build -e production && cp dist/index.html dist/200.html && surge dist my-app.surge.sh"
+    "deploy": "ember build -e production && cp dist/index.html dist/200.html && surge dist kidschores.surge.sh"
   },
   "repository": "",
   "engines": {
